welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:45: error: 'while' expected but 'return' found.
		}return true
                 ^ZigZag:47: error: '(' expected but ';' found.
	while (
^ZigZag:53: error: illegal start of simple expression
}
^